# forestFiresML

./: .gitignore  Makefile  README.md  data.dvc  dvc.yaml  load_data.ipynb  main.py  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.virtual_documents/notebooks/: 1.1.getting_the_data.ipynb  1.2.data_preparation.ipynb  1.3.data_preprocessing.ipynb  1.4.data_modelling.ipynb  Untitled.ipynb
App/: code_fastapi_n_docker.py  copia_de_fastapi.py  dockerfile  main.py
Fase 3/Pruebas unitarias e integrales/: convertidor.py  fase2.ipynb  fase2.py  resultados_pruebas.txt  test_fase3.py
Manipulacion_Preparacion/: Manipulacion_Preparacion.ipynb  X_test_processed.csv  X_train_processed.csv  y_test_processed.csv  y_train_processed.csv
Seguimiento de Experimentos/: forestfires_processed.csv  forestfires_processed.csv.dvc  models.dvc
Seguimiento de Experimentos/models/: decision_tree.pkl  linear_regression.pkl  svm.pkl
docs/: mkdocs.yml
docs/docs/: index.md
forestFiresML/: __init__.py  dataset.py  features.py  feractoringClass.py  plots.py
forestFiresML/modeling/: predict.py  train.py
mlruns/0/: meta.yaml
mlruns/507441512363031304/: meta.yaml
models/: .gitignore
notebooks/: 1.1.getting_the_data.ipynb  1.2.data_preparation.ipynb  1.3.data_preprocessing.ipynb  1.4.data_modelling.ipynb  preprocess_data.py
refactoring/: clean_data.py  data_exp_n_prep.ipynb  data_processing.ipynb  evaluate_models.py  forest_fire_refactored.ipynb  ingest_data.py  load_data.ipynb  models_creation.ipynb  preprocess_data.py  train_models.py
(+2 files in other folders)
