[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "forestFiresML"
version = "0.0.1"
description = "Proyecto de Operaciones de Aprendizaje Autom\u00e1tico 2024 -  Equipo 31"
authors = [
  { name = "TEC-MNA/TC5044/Equipo31" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["forestFiresML"]
force_sort_within_sections = true
